Archive2/4d/93fc449a08e041/output
main.cpp:10:5: error: unterminated /* comment
    /*
    ^
main.cpp:21:2: error: expected '}'
}
 ^
main.cpp:9:1: note: to match this '{'
{
^
2 errors generated.
